--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -54,7 +54,7 @@
   }
 
   html {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "SF Pro Display", "Helvetica Neue", Helvetica, Arial, sans-serif;
     overscroll-behavior: none;
     height: 100%;
   }
